# BugXpert

./: .gitignore  KNN_CODE_QUALITY.md  KNN_Dataset.csv  LR_Dataset.csv  POLYNOMIAL_REGRESSION.md  PR_Dataset.csv  README.md  app.py  bug_classification_model.pkl  bug_prediction_model.pkl  bug_solutions.csv  code_quality_knn_model.pkl  code_quality_scaler.pkl  feature_scaler.pkl  knn_model.pkl  knn_model.py  knn_quality_model.py  knn_scaler.pkl  logistic_regression.py  polynomial_regression.py  pyproject.toml  render.yaml  requirements.txt  run.py
app/models/: __init__.py  logistic_regression.py  polynomial_regression.py
app/static/css/: style.css
app/static/js/: main.js
app/templates/: about.html  base.html  classify_bugs.html  code_quality.html  home.html  index.html  predict_bugs.html
